@@ -1,5 +1,3 @@
-
-
 import java.util.Objects;
 
 public class Planet extends CelestialObject {
@@ -10,8 +8,8 @@ public class Planet extends CelestialObject {
         this.centerStar = new Star();
     }
 
-    public Planet(String name, double x, double y, double z, Star centerStar) {
-        super(name, x, y, z);
+    public Planet(String name, double x, double y, double z, Star centerStar, int mass) {
+        super(name, x, y, z, mass);
         this.centerStar = centerStar;
     }
 
@@ -25,19 +23,21 @@ public class Planet extends CelestialObject {
 
     @Override
     public String toString() {
-        double dis = CelestialObject.getDistanceBetween(this, centerStar);
-        return String.format("%s circles around %s at the %.3f AU", getName(), centerStar.getName(), dis);
+        return "%s circles around %s at the %.3f AU".formatted(getName(), centerStar.getName(),
+                CelestialObject.getDistanceBetween(this, centerStar));
     }
 
     @Override
     public boolean equals(Object obj) {
         if (this == obj)
             return true;
-        if (obj == null || getClass() != obj.getClass())
+        if (!(obj instanceof Planet))
+            return false;
+        if (!super.equals(obj))
             return false;
 
         Planet other = (Planet) obj;
-        return super.equals(other) && Objects.equals(centerStar, other.centerStar);
+        return Objects.equals(centerStar, other.centerStar);
     }
 
     @Override
