@@ -1,38 +1,46 @@
 import java.util.Objects;
 
-public class Star extends CelestialObject{
+public class Star extends CelestialObject {
     private double magnitude;
 
-    public Star(){
-       super(); 
-        this.magnitude = 0.0;
-    }
-      public Star(String name, double x, double y, double z, double magnitude) {
-        super(name, x, y, z); 
-        this.magnitude = magnitude;
-    }
-    public double getMagnitude(){
+    public double getMagnitude() {
         return magnitude;
     }
-    public void setMagnitude(double newmag){
-      this.magnitude=newmag;
+
+    public void setMagnitude(double magnitude) {
+        this.magnitude = magnitude;
     }
-  @Override
+
+    public Star() {
+        super();
+        this.magnitude = 0.0;
+    }
+
+    public Star(String name, double x, double y, double z, double magnitude, int mass) {
+        super(name, x, y, z, mass);
+        this.magnitude = magnitude;
+    }
+
+    @Override
     public String toString() {
-        return String.format("%s shines at the %.3f magnitude", getName(), magnitude);
+        return "%s shines at the %.3f magnitude".formatted(getName(), this.magnitude);
     }
-     @Override
+
+    @Override
     public boolean equals(Object obj) {
-        if (this == obj) return true; 
-        if (obj == null || getClass() != obj.getClass()) return false;
+        if (this == obj)
+            return true;
+        if (!(obj instanceof Star))
+            return false;
+        if (!super.equals(obj))
+            return false;
 
         Star other = (Star) obj;
-        
-        return Double.compare(other.magnitude, magnitude) == 0 &&
-               super.equals(other);
+        return Double.compare(magnitude, other.magnitude) == 0;
     }
-     @Override
+
+    @Override
     public int hashCode() {
-        return Objects.hash(super.hashCode(), magnitude);
+        return Objects.hash(name, x, y, z, magnitude);
     }
 }
